Update libraries for new Android Studio Version